# KBEngine-Nex

./: .gitignore  README.md  UPDATE.md  dockerfile  install_linux.sh  install_macos.sh  install_windows.bat
.github/workflows/: main.yml
docs/: plugins_开发说明.md  reloadScript_热更使用说明.md
gitee/: install_linux.sh
godo_mmorpg/: AGENTS.md
install/: install_linux.sh  install_macos.sh  install_windows.bat
install/macos/: fix-quarantine.sh
install/proxy/: install_linux.sh  install_macos.sh  install_windows.bat
install/uninstall/: uninstall_vcpkg_linux.sh  uninstall_vcpkg_macos.sh  uninstall_vcpkg_win.bat
kbe/res/server/: kbengine_defaults.xml
kbe/res/server/log4cxx_properties_defaults/: logger.properties
kbe/src/: CMakeLists.txt  Directory.Build.targets  guiconsole.sln  kbengine nex.sln  vcpkg.json
kbe/src/cmakefile/: OpenSSL.cmake  copy_python_dynload.cmake.in  copy_python_lib.cmake.in
kbe/src/lib/client_lib/: client_lib.vcxproj  clientapp.cpp  clientobjectbase.cpp  entity.cpp  event.h  kbemain.h
kbe/src/lib/common/: base64.cpp  blowfish.cpp  common.h  common.vcxproj  kbeversion.h  md5.cpp  md5.h  platform.h  rsa.cpp  ssl.cpp  strutil.cpp  timer.h  timer.inl  timestamp.cpp  timestamp.h
kbe/src/lib/db_interface/: CMakeLists.txt  db_interface.cpp  db_interface.h  db_interface.vcxproj  entity_table.h
kbe/src/lib/db_mongodb/: CMakeLists.txt  db_interface_mongodb.cpp  db_interface_mongodb.h  db_mongodb.vcxproj  entity_table_mongodb.cpp  entity_table_mongodb.h  kbe_table_mongodb.cpp  kbe_table_mongodb.h
kbe/src/lib/db_mysql/: CMakeLists.txt  db_interface_mysql.cpp  db_interface_mysql.h  db_mysql.vcxproj  entity_table_mysql.cpp  kbe_table_mysql.cpp  read_entity_helper.h  remove_entity_helper.h  sqlstatement.h  write_entity_helper.h
kbe/src/lib/db_postgresql/: CMakeLists.txt  ReadMe.txt  common.cpp  common.h  db_exception_postgresql.cpp  db_exception_postgresql.h  db_interface_postgresql.cpp  db_interface_postgresql.h  db_postgresql.vcxproj  db_postgresql.vcxproj.filters  db_transaction.cpp  db_transaction.h  entity_sqlstatement_mapping.cpp  entity_sqlstatement_mapping.h  entity_table_postgresql.cpp  entity_table_postgresql.h  kbe_table_postgresql.cpp  kbe_table_postgresql.h  sqlstatement.cpp  sqlstatement.h
kbe/src/lib/dependencies/sigar/win32/: CMakeLists.txt
kbe/src/lib/entitydef/: CMakeLists.txt  common.cpp  datatype.cpp  datatype.h  datatypes.cpp  datatypes.h  entities.h  entity_call.cpp  entity_component.cpp  entity_component.h  entity_component_call.h  entity_garbages.h  entity_macro.h  entitycallabstract.h  entitydef.cpp  entitydef.h  entitydef.vcxproj  entitydef.vcxproj.filters  fixeddict.cpp  method.cpp  py_entitydef.cpp  remote_entity_method.cpp  scriptdef_module.cpp  scriptdef_module.h  scriptdef_module.inl
kbe/src/lib/helper/: CMakeLists.txt  crashhandler.cpp  crashhandler.h  debug_helper.cpp  helper.vcxproj  sys_info.cpp  watch_pools.cpp
kbe/src/lib/math/: math.vcxproj
kbe/src/lib/navigation/: navigation.vcxproj  navigation_handle.h  navigation_mesh_handle.cpp  navigation_mesh_handle.h  navigation_tile_handle.cpp  navigation_tile_handle.h  stlastar.h
kbe/src/lib/network/: CMakeLists.txt  address.cpp  bundle.cpp  bundle_broadcast.cpp  channel.cpp  common.cpp  common.h  encryption_filter.cpp  endpoint.cpp  endpoint.h  endpoint.inl  event_dispatcher.h  event_dispatcher.inl  event_poller.cpp  event_poller.h  http_utility.cpp  ikcp.c  kcp_packet_receiver.cpp  kcp_packet_sender.cpp  listener_tcp_receiver.cpp  message_handler.cpp  network.vcxproj  network.vcxproj.filters  network_interface.cpp  network_interface.h  packet_reader.cpp  packet_receiver.cpp  packet_sender.cpp  poller_completion.cpp  poller_completion.h  poller_epoll.cpp  poller_epoll.h  poller_io_uring.cpp  poller_io_uring.h  poller_iocp.cpp  poller_iocp.h  poller_kqueue.cpp  poller_kqueue.h  poller_select.cpp  poller_select.h  (+8 more)
kbe/src/lib/pyscript/: kbe_python.h  map.cpp  map.h  py_macros.h  py_memorystream.cpp  pyscript.vcxproj  pythread_lock.h  pyurl.cpp  script.cpp  script.h  scriptobject.h  scriptstderr.cpp  scriptstdout.cpp  vector3.h
kbe/src/lib/python/: CMakeLists.txt
kbe/src/lib/resmgr/: CMakeLists.txt  resmgr.vcxproj  resmgr.vcxproj.filters  resourceobject.cpp
kbe/src/lib/resmgr/plugins/: plugin_descriptor.h  plugin_manager.cpp  plugin_manager.h  plugin_manifest.cpp  plugin_manifest.h
kbe/src/lib/server/: CMakeLists.txt  asyncio_helper.cpp  asyncio_helper.h  callbackmgr.h  common.h  component_active_report_handler.cpp  components.cpp  entity_app.h  globaldata_client.cpp  globaldata_server.cpp  id_component_querier.cpp  kbemain.h  pendingLoginmgr.cpp  py_file_descriptor.cpp  py_file_descriptor.h  python_app.cpp  python_app.h  sendmail_threadtasks.cpp  server.vcxproj  serverapp.cpp  serverconfig.cpp  serverconfig.h  telnet_handler.cpp  telnet_handler.h  telnet_server.cpp
kbe/src/lib/thread/: thread.vcxproj  threadpool.cpp  threadpool.h
kbe/src/lib/xml/: xml.vcxproj
kbe/src/libs/: .gitkeep
kbe/src/server/baseapp/: CMakeLists.txt  archiver.cpp  backuper.cpp  baseapp.cpp  baseapp.h  baseapp.vcxproj  baseapp.vcxproj.filters  baseapp_interface.h  entity.cpp  entity_messages_forward_handler.h  initprogress_handler.cpp  proxy.cpp  restore_entity_handler.cpp
kbe/src/server/baseappmgr/: CMakeLists.txt  baseappmgr.vcxproj  baseappmgr.vcxproj.filters
kbe/src/server/cellapp/: CMakeLists.txt  cellapp.cpp  cellapp.h  cellapp.vcxproj  cellapp.vcxproj.filters  entity.cpp  entity.h  entity.inl  initprogress_handler.cpp  moveto_point_handler.cpp  moveto_point_handler.h  navigate_handler.cpp  navigate_handler.h  real_entity_method.cpp  space.cpp  spacememory.cpp  spacememorys.cpp  spacememorys.h  watch_obj_pools.cpp  witness.cpp
kbe/src/server/cellappmgr/: CMakeLists.txt  cellapp.h  cellappmgr.cpp  cellappmgr.vcxproj  cellappmgr.vcxproj.filters  space_viewer.cpp
kbe/src/server/dbmgr/: CMakeLists.txt  dbmgr.cpp  dbmgr.vcxproj  dbmgr.vcxproj.filters  dbtasks.cpp  interfaces_handler.cpp
kbe/src/server/init/: init.vcxproj
kbe/src/server/loginapp/: CMakeLists.txt  (+5 more)
(+87 files in other folders)
